--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     /* box-sizing: border-box; */
 }
+body {
+    background-color: black;
+}
 
 .unwanted-space {
     padding: 100px;
@@ -10,14 +13,6 @@
   height: 300vh;
 }
 
-.unwanted-space:first-of-type {
-  background: green;
-  
-}
-.unwanted-space:last-of-type {
-  background: red;
-  
-}
 .cards-container {
     /* margin: 10px; */
   display: flex;
@@ -40,6 +35,7 @@
   align-items: center;
   font-size: 10vw;
   border-radius: 1rem;
+  border: 3px solid white;
   overflow: hidden;
 }
 
